# Imgui_Template_Cmake_CppModules

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
assets/runtime/: ConfigFile.json  imgui.ini
cmake/: SetupPython.cmake
requirements/python/: requirements.txt
src/: CMakeLists.txt
src/app/: App_Launcher.bat.in  CMakeLists.txt  main.cpp
src/app/components/: logging_console.cpp
src/app/include/app/components/: logging_console.h
src/app/include/app/icons/: titlebar_logo.h  window_buttons.h  window_icon.h
src/app/include/app/layers/: custom_menu_bar.h  menu_bar.h  simple_render.h  title_bar.h
src/app/include/app/python/: manager.h
src/app/include/app/visualization/: random_plot.h
src/app/include/app/widgets/: viewportbar.h
src/app/include/components/: logging_console.h
src/app/include/layers/: render_scene.h  title_bar.h
src/app/include/python_interpreter/: python_manager.h
src/app/include/widgets/: viewport_bar.h
src/app/layers/: custom_main_menu_bar.cpp  custom_menu_bar.cpp  layers.cpp  main_menu_bar.cpp  menu_bar.cpp  render_scene.cpp  simple_render.cpp  title_bar.cpp
src/app/python/: manager.cpp
src/app/python_interpreter/: python_manager.cpp
src/app/resources/icons/: icon_app.cpp  icon_app.h  icon_titlebar.cpp  icon_titlebar.h  icons.cpp  titlebar_logo.cpp  window_buttons.cpp  window_buttons.h  window_icon.cpp
src/app/resources/windows_icon/: app_icon.rc
src/app/visualization/: random_plot.cpp
src/app/widgets/: viewport_bar.cpp  viewportbar.cpp
src/beryl/: CMakeLists.txt
src/beryl/config/: config_gui.cpp
src/beryl/core/: application.cpp  core.cpp  layer.cpp  window.cpp
src/beryl/gui/: context.cpp  gui.cpp  publicsans.cpp  themes.cpp
src/beryl/include/beryl/config/: config_gui.h
src/beryl/include/beryl/core/: application.h  layer.h  window.h
src/beryl/include/beryl/gui/: context.h  publicsans.h  themes.h
src/beryl/include/beryl/logging/: logger.h
src/beryl/include/beryl/renderer/: framebuffer.h  shader.h  texture.h  vertex.h
src/beryl/include/beryl/utils/: gl_utils.h  imgui_utils.h  path_utils.h
src/beryl/logging/: logger.cpp
src/beryl/renderer/: framebuffer.cpp  renderer.cpp  shader.cpp  texture.cpp  vertex.cpp
src/beryl/utils/: gl_utils.cpp  imgui_utils.cpp  path_utils.cpp
src/example_app/: App_Launcher.bat.in  CMakeLists.txt  imgui.ini  main.cpp
src/example_app/components/: logging_console.cpp
src/example_app/embed/: icon_app.h  icon_titlebar.embed  window_buttons.embed
src/example_app/icon/: app_icon.rc  icon_resource.h
src/example_app/include/layers/: custom_main_menu_bar.h  main_menu_bar.h  render_scene.h  title_bar.h
src/example_app/include/python_interpreter/: python_manager.h
src/example_app/include/ui_layers/: custom_main_menu_bar.h  title_bar.h
src/example_app/layers/: custom_main_menu_bar.cpp  main_menu_bar.cpp  render_scene.cpp  title_bar.cpp
src/example_app/python_interpreter/: python_manager.cpp
src/example_app/ui_layers/: custom_main_menu_bar.cpp  main_menu_bar.cpp  menu_bar.cpp  render_scene.cpp  title_bar.cpp
src/example_app/widgets/: viewport_bar.cpp
src/gui_core/: CMakeLists.txt
src/gui_core/config/: settings_config.cpp
src/gui_core/core/: application.cpp  color_styles.cpp  custom_widgets.cpp  imgui_context.cpp  layer.cpp  window.cpp
src/gui_core/image/: image_reader.cpp
src/gui_core/include/config/: settings_config.h
src/gui_core/include/core/: application.h  color_styles.h  custom_widgets.h  imgui_context.h  layer.h  window.h
src/gui_core/include/image/: image_reader.h
src/gui_core/include/logging/: logger.h
src/gui_core/include/path/: path_utilities.h
src/gui_core/include/renderer/: framebuffer.h  gl_error_utils.h  texture.h  vertex.h
src/gui_core/include/shaders/: shaders.h
src/gui_core/logging/: logger.cpp
src/gui_core/logging/include/: logger.h
src/gui_core/path/: path_utilities.cpp
src/gui_core/renderer/: framebuffer.cpp  gl_error_utils.cpp  texture.cpp  vertex.cpp
src/gui_core/shaders/: shaders.cpp
src/gui_core/utilities/: image.cpp  settings_config.cpp
submodules/: CMakeLists.txt
submodules/glad/: CMakeLists.txt  glad.c
submodules/glad/include/glad/: glad.h
submodules/glfw/: CMakeLists.txt
submodules/imgui/: CMakeLists.txt
submodules/nlohmann_json/: CMakeLists.txt
submodules/pybind/: CMakeLists.txt
submodules/spdlog/: CMakeLists.txt
submodules/stb/: CMakeLists.txt
utils/: image_memory_transform.py
